--- a/src/styles/sidebarComponent.css
+++ b/src/styles/sidebarComponent.css
@@ -39,10 +39,9 @@
 /******* Introduction Component Style *******/
 
 #Introduction {
-    background: url("../images/introduction/ujjaval.jpeg") no-repeat top center/cover;
+    background: url("../images/introduction/ujjaval_pro.jpg") no-repeat top center/cover;
     position: relative;
-    height: 100vh;
-    background-position-y: 40%;
+    height: 100vh
 }
 
 #Introduction .main-container {
